Protect secret placeholders in workflow artifacts (#38861)
* Protect secret placeholders in workflow artifacts

- Treat secret_ref as a protected placeholder input slot instead of a resolver-backed reference
- Emit only masked values or neutral placeholders in plan, preview, validation, and manual artifacts
- Stop automatic apply before side effects when placeholders still require manual replacement

* Protect secret placeholders in workflow artifacts

- Treat secret_ref as a protected placeholder input slot instead of a resolver-backed reference
- Emit only masked values or neutral placeholders in plan, preview, validation, and manual artifacts
- Stop automatic apply before side effects when placeholders still require manual replacement